2010-08-31 H. Doreau <henri.doreau@gmail.com>
	* Propagation.py: This module has been completely rewritten. It doesn't
	differenciate the topology nodes anymore, but simply use the topology
	tree to generate efficient routing tables. The router is much more
	efficient right now, and will behaves differently on each node.

	Also improved integration with the recent Communication module.

	* tests/PropagationTest.py: Also completely rewritten indeed.

2010-08-31 H. Doreau <henri.doreau@gmail.com>
	
	* Communication.py: Refactored the code to improve cleanliness and
	flexibility. The Messages are now implemented as small pieces of code,
	only defined by a type, and id and a few other attributes (according to
	their type). The (de)serialization can be done generically and in a
	simpler way, by the XMLReader itself.
	Also renamed some classes and changed the Driver interface to respect
	conventions.

	* test/CommunicationTests.py: updated the test to handle (100%
	coverage!) the changes.

	* Propagation.py: likewise

2010-08-26 H. Doreau <henri.doreau@gmail.com>
	* Communication.py: Added event based communication channels for
	efficient communications between the nodes. Also did some cosmetic
	fixes in the code.

	* test/CommunicationTests.py: Updated the tests to test the new
	functionnalities and improve general coverage.

	* Propagation.py: changed the execution method to use the new
	mechanisms.

2010-08-20 H. Doreau <henri.doreau@gmail.com>
	* Topology.py: pruned the exception tree so that the module now only
	have a unique exception type. This helps keeping higher level code
	clean.  Details can still be added using the exception string.

	* tests/TopologyTests.py: updated the tests to use this unique
	exception.

	* Propagation.py: code improvements to increase maintainability and
	performances. The propagation router has been put as a part of the
	propagation tree. The router's internals have been improved so that